202303.txt
20230301

Virtual boxでUbuntuをインストール
インストールするときに画面が見切れてボタンが押せず。
調べたら、Alt + F7で画面を移動できることを初めて知る。

20230302

Virtual box内のUbuntuで
https://github.com/o-oconnell/minixfromscratch
をqemuで実行してその中でカーネルのビルド(make world)。
古いPC & Virtual box なので遅い。

20230305

minix + gdb でブレークはって、ステップ実行、みたいなことをしようと調べるも方法がわからず。
(-s -Sをつけてqemuを起動して、target remote :1234で接続まではできるが)

https://www.sugawara-lab.jp/fig/xv6-riscv-jpn.pdf
と
https://github.com/mit-pdos/xv6-public
で遊べるのではないか。

20230306

memo
https://doc.redox-os.org/book/

20230307

build-idをプログラム内から参照する方法がないか調べる
int main() {printf("%d", /*ここでnote section参照*/ );} 
みたいになことできないか。

以下が参考になるか？
https://interrupt.memfault.com/blog/gnu-build-id-for-firmware


20230307

memo
https://github.com/vvaltchev/tilck

20230308

xxd コマンドについて調べる
xargs コマンドについて調べる。 memo ***** | xargs -I {f} find ./ -name "{f}" とか。


20230312

https://github.com/vvaltchev/tilck
をWSL上でビルド、qemuの起動までしてみる。


20230313

https://www.gnu.org/software/make/manual/html_node/Wildcard-Function.html
これ、こうなったのわりと最近？
https://lists.gnu.org/archive/html/help-make/2020-01/msg00012.html
Ver 4.3 くらいからかな。


20230318

Spresense Windows11(WSL2)向けセットアップ
"https://developer.sony.com/develop/spresense/docs/sdk_set_up_ja.html#_windows11wsl2%E5%90%91%E3%81%91%E3%82%BB%E3%83%83%E3%83%88%E3%82%A2%E3%83%83%E3%83%97"
をやる。

WSL上でUSBの認識方法がよくわからなかった。
これを使うらしい。
https://github.com/dorssel/usbipd-win

手順通りに実施すると以下のワーニング。
usbipd wsl attach --busid 2-1
usbipd: warning: A third-party firewall may be blocking the connection; ensure TCP port 3240 is allowed.

ポートを開けて解決。(インストールしてたセキュリティソフトがポートふさいでた)



20230319

nuttx/arch/arm/src/armv7-m/Toolchain.defs
を見る。
clangも使えるようになってるか？


20230320

nuttxをclangでビルドしようとしたら
armv7em_hard_fpv4_sp_d16_nosysがない、とエラーが出た。

https://clang.llvm.org/docs/UsersManual.html#configuration-files
というオプションがある

armv7em_hard_fpv4_sp_d16_nosysはコンパイラに渡す引数を書くファイル、というところか。な



20230322

armv7em_hard_fpv4_sp_d16_nosysの内容を以下にして、

-target armv7e-m-none-none-eabi

-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/c++/v1/
-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/c++/v1/experimental/
-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/x86_64-unknown-linux-gnu/c++/v1/


makeしたら
以下のエラー


CC:  stdio/lib_dtoa_engine.c
stdio/lib_dtoa_engine.c:85:12: error: call to undeclared function 'isnan'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  else if (isnan(x))
           ^
stdio/lib_dtoa_engine.c:89:12: error: call to undeclared function 'isinf'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  else if (isinf(x))
           ^


20230325

きちんと調べてみる。
gcc, clangで -vオプションをつけてインクルードパスの比較

gcc

ignoring duplicate directory "$HOME/spresenseenv/usr/bin/../lib/gcc/../../lib/gcc/arm-none-eabi/10.3.1/include"
ignoring nonexistent directory "$HOME/spresenseenv/usr/bin/../arm-none-eabi/usr/local/include"
ignoring duplicate directory "$HOME/spresenseenv/usr/bin/../lib/gcc/../../lib/gcc/arm-none-eabi/10.3.1/include-fixed"
ignoring duplicate directory "$HOME/spresenseenv/usr/bin/../lib/gcc/../../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/include"
ignoring nonexistent directory "$HOME/spresenseenv/usr/bin/../arm-none-eabi/usr/include"
ignoring duplicate directory "$HOME/spresense/nuttx/sched"
#include "..." search starts here:
#include <...> search starts here:

 .
 $HOME/spresense/nuttx/include
 $HOME/spresense/nuttx/../sdk/include
 $HOME/spresenseenv/usr/bin/../lib/gcc/arm-none-eabi/10.3.1/include
 $HOME/spresenseenv/usr/bin/../lib/gcc/arm-none-eabi/10.3.1/include-fixed
 $HOME/spresenseenv/usr/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/include
 
clang

ignoring nonexistent directory "$HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/../lib/clang-runtimes/armv7e-m-none-none-eabi/include"
ignoring duplicate directory "."
ignoring duplicate directory "$HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/lib/clang/16/include"
#include "..." search starts here:
#include <...> search starts here:
 $HOME/spresense/nuttx/include/nuttx
 $HOME/spresense/nuttx/arch/arm/include
 $HOME/spresense/sdk/include/arch
 $HOME/spresense/nuttx/include/nuttx/lib
 .
 $HOME/spresense/nuttx/include
 $HOME/spresense/nuttx/../sdk/include
 $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/lib/clang/16/include


$HOME/spresense/nuttx/tools/Config.mk のいかに -vを追加し確認中

define COMPILE
	@echo "CC: $1"
	$(Q) $(CC) -v -c $(CFLAGS) $($(strip $1)_CFLAGS) $1 -o $2
endef


20230326

armv7em_hard_fpv4_sp_d16_nosysの中を以下のようにした。

-target armv7e-m-none-none-eabi

-mthumb

-nostdinc

-I $HOME/spresense/sdk/apps/include
-I $HOME/spresense/nuttx/include/
-I $HOME/spresense/nuttx/../sdk/include/

-I $HOME/spresense/nuttx/include/nuttx/lib/
-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/c++/v1/
-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/c++/v1/experimental/
-I $HOME/clang+llvm-16.0.0-x86_64-linux-gnu-ubuntu-18.04/include/x86_64-unknown-linux-gnu/c++/v1/


そうすることでmakeした結果、

LD: nuttx
ld.lld: error: undefined symbol: __aeabi_ldivmod
>>> referenced by clock_time2ticks.c:73 ($HOME/spresense/nuttx/libs/libc/sched/clock_time2ticks.c:73)
>>>               clock_time2ticks.o:(clock_time2ticks) in archive $HOME/spresense/nuttx/staging/libc.a

ld.lld: error: undefined symbol: __aeabi_uldivmod
>>> referenced by lib_ultoa_invert.c:65 ($HOME/spresense/nuttx/libs/libc/stdio/lib_ultoa_invert.c:65)
>>>               lib_ultoa_invert.o:(__ultoa_invert) in archive $HOME/spresense/nuttx/staging/libc.a
>>> referenced by sig_timedwait.c:299 ($HOME/spresense/nuttx/sched/signal/sig_timedwait.c:299)
>>>               sig_timedwait.o:(nxsig_timedwait) in archive $HOME/spresense/nuttx/staging/libsched.a
>>> referenced by cxd56_delay.c
>>>               cxd56_delay.o:(OUTLINED_FUNCTION_0) in archive $HOME/spresense/nuttx/staging/libarch.a
>>> referenced 16 more times

ld.lld: error: undefined symbol: __aeabi_llsl
>>> referenced by cxd56_backuplog.c:145 ($HOME/spresense/nuttx/arch/arm/src/chip/cxd56_backuplog.c:145)
>>>               cxd56_backuplog.o:(up_backuplog_alloc) in archive $HOME/spresense/nuttx/staging/libarch.a
>>> referenced by cxd56_backuplog.c:297 ($HOME/spresense/nuttx/arch/arm/src/chip/cxd56_backuplog.c:297)
>>>               cxd56_backuplog.o:(up_backuplog_free) in archive $HOME/spresense/nuttx/staging/libarch.a
>>> referenced by cxd56_backuplog.c:299 ($HOME/spresense/nuttx/arch/arm/src/chip/cxd56_backuplog.c:299)
>>>               cxd56_backuplog.o:(up_backuplog_free) in archive $HOME/spresense/nuttx/staging/libarch.a

ld.lld: warning: address (0xd025f6c) of section .data is not a multiple of alignment (16)
ld.lld: warning: address (0xd026154) of section .bss is not a multiple of alignment (1024)
make[2]: *** [Makefile:159: nuttx] Error 1
make[2]: Leaving directory '$HOME/spresense/nuttx/arch/arm/src'
make[1]: *** [tools/Unix.mk:509: nuttx] Error 2
make[1]: Leaving directory '$HOME/spresense/nuttx'
make: *** [Makefile:117: all] Error 2

コンパイルまではできたのではないか。リンクで失敗している。

20230327

https://github.com/llvm/llvm-project/blob/main/llvm/docs/HowToCrossCompileBuiltinsOnArm.rst
を読んている

